--- a/public/style.css
+++ b/public/style.css
@@ -534,20 +534,6 @@ h5, p {
     display: table;
     clear: both;
 }
-
-  
-input[type=text] {
-    width: 100%;
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: 3px solid #ccc;
-    outline: none;
-    border-radius: 4px;
-}
-  
-input[type=text]:focus {
-    border: 3px solid #555;
-}
   
 select {
     width: 100%;
@@ -642,4 +628,42 @@ label {
 .highlight:hover {
     box-shadow: inset -2px 0 0 black, inset 0 -2px 0 black, inset 2px 0 0 black, inset 0 2px 0 black;
     cursor: pointer;
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: #ccc 3px solid;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    outline: none;
+    height: 45px;
+    margin: 0px!important;
+}
+
+input:focus {
+    border: none;
+    border: #2E8BC0 3px solid!important;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+}
+
+button {
+    height: 45px;
+    width: 140px;
+    border: none;
+    background: none;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    background: #2E8BC0;
+    color: white;
+}
+
+.search-container {
+    display: flex;
+    flex-direction: row;
+    align-self: flex-end;
+    justify-content: flex-start;
+    width:100%;
 }
