--- a/public/style.css
+++ b/public/style.css
@@ -658,6 +658,7 @@ button {
     border-bottom-right-radius: 6px;
     background: #2E8BC0;
     color: white;
+    cursor: pointer;
 }
 
 .search-container {
